bin/testsuite/tests/compiler/src/errors/compiler5512.swg
#global testerror "Err0286"

func toto()
{
    for 5'u32 to 0xFFFFFFFF's32
    {
    }
}
